1999-02-24  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* about.cc (about_dialog): Rewrote using auto_widget.
	(populate): Likewise.

	* autowidget.h: New file.
	* Makefile.am (noinst_HEADERS): Add autowidget.h.

	* options.cc: Add an excetion to license terms.

	* README: Modified.

	* README.ja: New file.
	* Makefile.am (EXTRA_DIST): Add README.ja.

	* NEWS: Updated.

	* about.cc: Add an exception to license terms.
	* glclock.cc: Likewise.
	* glclock.h: Likewise.
	* main.cc: Likewise.
	* module.cc: Likewise.
	* module.h: Likewise.
	* simple.c: Likewise.
	* simple.h: Likewise.

1999-02-21  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* README: Modified.

	* main.cc: Undef inline at first.
	Modify comments.
	(main): Add exception handling.
	(main): Use EXIT_SUCCESS.
	Undef SESSION if GTK+ 1.1 or later.

1999-02-17  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (dist-snapshot): Add suffix with x to VERSION.

1999-02-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* options.cc (populate): Add the Rendering tab.

	* glclock.cc (edit_options): New function.  Update the header too.
	(glclock): Add the function to the popup menu.
	(glclock): Move a comment.

	* options.cc: New file.
	* Makefile.am (rglclock_SOURCES): Add options.cc.

	* glclock.h (class options_dialog): New class.

	* gtkrc: New file.
	* Makefile.am (pkgdata_DATA): Add gtkrc.
	(EXTRA_DIST): Add gtkrc.

1999-02-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc (finish_realize): New function.  Update the header
	too.
	(handle_configure_event): Remove context creation.
	(glclock): Connect "realize".

	* about.cc (show): Use gtk_grab_add/remove.
	(finish_realize): Renamed and modified from handle_configure_event
	for the "realize" signal.  Update all refs too.
	(about_dialog): Add "realize" connection and remove
	"configure_event".

	* main.cc (parse_gtkrc) [PKGDATADIR]: Add gtk_rc_parse for default
	gtkrc file.

	* Makefile.am (INCLUDES): Add -DPKGDATADIR=....
